Fixed big gap at top of Mobile navbar on home page

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -106,6 +106,7 @@
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
+    justify-content: start;
   }
 
   .nav-menu.active {
